 - GBA SIO: Fix Normal mode being totally broken (fixes mgba.io/i/1800)
 - GBA SIO: Fix deseralizing SIO registers
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Implement green swap (fixes mgba.io/i/1609)
 - GBA Video: Emulate sprite cycle limits in OpenGL renderer (fixes mgba.io/i/1635)
 - SM83: Emulate HALT bug
Other fixes:
 - 3DS: Fix thread cleanup
 - All: Improve export headers (fixes mgba.io/i/1738)
 - CMake: Fix build with downstream minizip that exports incompatible symbols
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix threading improperly setting paused state while interrupted
 - Debugger: Don't skip undefined instructions when debugger attached
 - Debugger: Close trace log when done tracing
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - mGUI: Don't attempt to preload files larger than can fit in RAM
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Load/save bytes from memory viewer in the order visible (fixes mgba.io/i/1900)
 - Qt: Fix running proxied video if it gets pushed to the main thread
 - Qt: Fix game display sometimes disappearing after closing load/save state screen
 - Qt: Fix cancelling pausing before the frame ends
 - Qt: Fix gamepad event dispatching (fixes mgba.io/i/1922)
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
 - Wii: Fix crash on unloading irregularly sized GBA ROMs
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - Core: Add savedataUpdated callback
 - Core: Add shutdown callback
 - Core: Rework thread state synchronization
 - GB: Allow pausing event loop while CPU is blocked
 - GB: Add support for sleep and shutdown callbacks
 - GBA: Allow pausing event loop while CPU is blocked